--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -4,8 +4,8 @@
       <h5 class="card-title">Special title treatment</h5>
       <form [formGroup]="form " (submit)="onSubmit()">
         <div class="mb-3">
-            <label for="username" class="form-label">Ten nguoi dung</label>
-            <input type="username" class="form-control" formControlName="username" placeholder="nhap ten">
+            <label for="name" class="form-label">Ten nguoi dung</label>
+            <input type="username" class="form-control" formControlName="name" placeholder="nhap ten">
         </div>
         <div class="mb-3">
             <label for="email" class="form-label">Email addres</label>
