--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -10,13 +10,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <!-- Chỉ giữ lại các nút Login, Register và Dashboard -->
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="!isLoggedIn">
               <a routerLink="/login">Login</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="!isLoggedIn">
               <a routerLink="/register">Register</a>
             </li>
-            <li class="nav-item">
+
+
+            <li class="nav-item" *ngIf="isLoggedIn">
               <a routerLink="/dashboard">Dashboard</a>
             </li>
           </ul>
